# dx-workspace

./: BOTTOM_PANE_ABSOLUTE_BOTTOM_ISSUE.md  CHANGELOG.md  CODEX.md  CODEX_CONNECTION_EXTRACTION_CHECKLIST.md  CODEX_FINAL_IMPLEMENTATION.md  CODEX_IMPLEMENTATION_COMPLETE.md  CODEX_INTEGRATION_CHECKLIST.md  CODEX_INTEGRATION_PLAN.md  CODEX_INTEGRATION_REVISED_PLAN.md  CODEX_INTEGRATION_STATUS.md  CODEX_INTEGRATION_SUMMARY.md  CODEX_MISTRAL_INTEGRATION_STATUS.md  CODEX_TUI_ARCHITECTURE.md  CODEX_TUI_VS_DX_COMPARISON.md  DX.md  Dx.md  ERRORS.md  GOALS.md  IMPLEMENTATION_SUMMARY.md  LOCAL_LLM_REMOVAL_SUMMARY.md  MEDIA.md  TODO.md  justfile
codex-rs/: AGENTS.md  Cargo.toml  dx_messages.json
codex-rs/.cargo/: config.toml
codex-rs/3d/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
codex-rs/3d/.github/workflows/: ci.yml
codex-rs/3d/scripts/: convert.py  sog_convert.py  supersplat-dl.sh
codex-rs/3d/shaders/: prefix_scan.metal  projection.metal  radix_sort.metal  tile_ops.metal  tile_rasterize.metal
codex-rs/3d/src/: camera.rs  demo.rs  main.rs  math.rs  sort.rs  splat.rs  terminal_setup.rs
codex-rs/3d/src/input/: mod.rs  state.rs  thread.rs
codex-rs/3d/src/parser/: dot_splat.rs  mod.rs  ply.rs
codex-rs/3d/src/render/: frame.rs  frame_halfblock.rs  hud.rs  mod.rs  pipeline.rs  rasterizer.rs
codex-rs/agent/: .coderabbit.yaml  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.debian  Dockerfile.debian.ci  LICENSE-MIT  NOTICE  clippy.toml  docker-compose.yml  install.sh
codex-rs/agent/.githooks/: pre-push
codex-rs/agent/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
codex-rs/agent/.github/codeql/: codeql-config.yml
codex-rs/agent/.github/workflows/: pub-aur.yml  pub-homebrew-core.yml  pub-scoop.yml  publish-crates-auto.yml  publish-crates.yml  release-beta-on-push.yml  release-stable-manual.yml  tweet-release.yml
codex-rs/agent/benches/: agent_benchmarks.rs
codex-rs/agent/crates/robot-kit/: Cargo.toml  robot.toml
codex-rs/agent/dev/: ci.sh  cli.sh  config.template.toml  docker-compose.ci.yml  docker-compose.yml  recompute_contributor_tiers.sh  test-termux-release.sh
codex-rs/agent/example-plugin/: Cargo.toml  manifest.toml
codex-rs/agent/example-plugin/src/: lib.rs
codex-rs/agent/examples/: test_metasearch.rs
codex-rs/agent/firmware/arduino/: arduino.ino
codex-rs/agent/firmware/esp32/: Cargo.toml
codex-rs/agent/firmware/esp32-ui/: Cargo.toml
codex-rs/agent/firmware/nucleo/: Cargo.toml
codex-rs/agent/firmware/uno-q-bridge/: app.yaml
codex-rs/agent/fuzz/: Cargo.toml
codex-rs/agent/fuzz/fuzz_targets/: fuzz_command_validation.rs
codex-rs/agent/python/: pyproject.toml
codex-rs/agent/python/tests/: test_tools.py
codex-rs/agent/python/zeroclaw_tools/: __init__.py  __main__.py  agent.py
codex-rs/agent/scripts/ci/: fetch_actions_data.py
codex-rs/agent/scripts/release/: cut_release_tag.sh
codex-rs/agent/src/: i18n.rs  identity.rs  lib.rs  main.rs  migration.rs  theme.rs  util.rs
codex-rs/agent/tool_descriptions/: en.toml  zh-CN.toml
codex-rs/agent/web/: index.html  package-lock.json  package.json
codex-rs/app-server/src/: outgoing_message.rs
codex-rs/archeive/: BUILD.bazel  DX.md  rustfmt.toml
codex-rs/archeive/.codex/: config.toml
codex-rs/archeive/.github/: CODEX_SETUP.md
codex-rs/archeive/hexed/: BOTTOM_PANE_PIN_HELP.md  BRUTAL_TRUTH_MISSING_FEATURES.md  CARGO_TOML_BACKUP.md  CHANGELOG_ROOT.md  CODEX_CONNECTION_EXTRACTION_CHECKLIST.md  CODEX_INTEGRATION_PLAN.md  FINAL_FIX_NEEDED.md  MEDIA.md  more.txt
codex-rs/archeive/src/: additional_dirs.rs  animations.rs  app_backtrack.rs  app_event.rs  app_event_sender.rs  app_server_tui_dispatch.rs  audio.rs  chat_components.rs  chatwidget.rs  codex.rs  codex_integration.rs  codex_lib.rs  color.rs  components.rs  custom_terminal.rs  cwd_prompt.rs  dispatcher.rs  dx.rs  exec_command.rs  exit_animation.rs  file_search.rs  frames.rs  history_cell.rs  key_hint.rs  markdown.rs  markdown_stream.rs  mention_codec.rs  model_manager.rs  model_migration.rs  models.rs  pager_overlay.rs  perf.rs  selection_list.rs  session_log.rs  skills_helpers.rs  terminal_title.rs  updates.rs  voice.rs
codex-rs/cli/: Cargo.toml  build.rs
codex-rs/cli/src/: main.rs
codex-rs/codex-api/src/: lib.rs
codex-rs/core/: Cargo.toml  hierarchical_agents_message.md  models.json
codex-rs/core/src/: api_bridge.rs  client.rs  client_common.rs  codex.rs  lib.rs  model_provider_info.rs  model_provider_info_tests.rs
codex-rs/dx/: CHANGELOG.md  Cargo.toml  Clean State Continued Continued Continued Continue.md  DX.md  HELP.md  IMPLEMENTATION_STATUS.md  OLLAMA.md  README.md  SUMMARY.md  TODO.md
codex-rs/dx/hexed/: DX_INTEGRATION_PLAN.md  Dx_ROOT.md  GOALS.md  HELP_REQUEST.md  INTEGRATION_PLAN.md  NAVIGATION_IMPLEMENTATION_PLAN.md  TUI.md
codex-rs/dx/src/: animations.rs  app.rs  app_event.rs  audio.rs  bridge.rs  chat_components.rs  chatwidget.rs  chatwidget_full.rs  cli.rs  clipboard_text.rs  codex.rs  codex_agent.rs  codex_backend.rs  codex_lib.rs  collaboration_modes.rs  cwd_prompt.rs  dispatcher.rs  dx.rs  dx_dispatcher_bridge.rs  dx_render.rs  exit_animation.rs  external_editor.rs  input.rs  insert_history.rs  line_truncation.rs  live_wrap.rs  markdown_render.rs  model_migration.rs  models.rs  multi_agents.rs  oss_selection.rs  pager_overlay.rs  panic.rs  resume_picker.rs  root.rs  scrollbar.rs  shimmer.rs  slash_command.rs  splash.rs  state.rs  (+9 more)
codex-rs/local-llm/: Cargo.toml
codex-rs/local-llm/src/: lib.rs
codex-rs/markdown/examples/: generate_dx_markdown.rs
codex-rs/protocol/src/: config_types.rs
codex-rs/tachyonfx/: Cargo.toml  README.md
codex-rs/tachyonfx/src/: bounding_box.rs  buffer_renderer.rs  cell_iter.rs  color_cache.rs  color_ext.rs  color_mapper.rs  color_space.rs  effect.rs  effect_manager.rs  interpolation.rs  motion.rs  rect_ext.rs  ref_rect.rs  render_effect.rs  shader.rs
codex-rs/tui/src/: app_event.rs  app_event_sender.rs  history_cell.rs  lib.rs
codex-rs/tui_app_server/src/: history_cell.rs
(+479 files in other folders)
