[package]
name = "tortuise"
version = "0.1.1"
edition = "2021"
description = "Terminal-native 3D Gaussian Splatting viewer — render .ply and .splat scenes in your terminal"
license = "MIT"
repository = "https://github.com/buildoak/tortuise"
homepage = "https://github.com/buildoak/tortuise"
keywords = ["gaussian-splatting", "tui", "3d", "terminal", "rendering"]
categories = ["command-line-utilities", "graphics", "rendering"]
authors = ["Nick Oak"]
readme = "README.md"
rust-version = "1.80"
exclude = ["scenes/bonsai.splat", "scenes/luigi.ply", "assets/*", "scripts/*"]

[features]
default = []
metal = ["dep:metal", "dep:objc"]

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1.10"
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
