[package]
name = "fb-adapter"
description            = "Yazi image adapter"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-config = { path = "../config", version = "26.2.2" }
fb-emulator = { path = "../emulator", version = "26.2.2" }
fb-fs = { path = "../fs", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }

# External dependencies
ansi-to-tui = { workspace = true }
anyhow      = { workspace = true }
base64      = { workspace = true }
crossterm   = { workspace = true }
image       = { version = "0.25.10", default-features = false, features = [ "avif", "bmp", "dds", "exr", "ff", "gif", "hdr", "ico", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp" ] }
moxcms      = "0.8.1"
palette     = { version = "0.7.6", default-features = false }
quantette   = { version = "0.5.1", default-features = false }
ratatui     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

