[package]
name = "fb-fs"
description            = "Yazi file system"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-ffi = { path = "../ffi", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-shim = { path = "../shim", version = "26.2.2" }

# External dependencies
anyhow           = { workspace = true }
arc-swap         = "1.8.2"
bitflags         = { workspace = true }
dirs             = { workspace = true }
either           = { workspace = true }
foldhash         = { workspace = true }
hashbrown        = { workspace = true }
parking_lot      = { workspace = true }
percent-encoding = { workspace = true }
rand             = { workspace = true }
regex            = { workspace = true }
scopeguard       = { workspace = true }
serde            = { workspace = true }
tokio            = { workspace = true }
tracing          = { workspace = true }
typed-path       = { workspace = true }

[target."cfg(unix)".dependencies]
libc  = { workspace = true }
uzers = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_Storage_FileSystem" ] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = { workspace = true }
objc2               = { workspace = true }

[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.2.5"

