[package]
name = "fb-shared"
description            = "Yazi shared library"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-macro = { path = "../macro", version = "26.2.2" }

# External dependencies
anyhow           = { workspace = true }
crossterm        = { workspace = true }
dyn-clone        = { workspace = true }
foldhash         = { workspace = true }
futures          = { workspace = true }
hashbrown        = { workspace = true }
memchr           = "2.8.0"
ordered-float    = { workspace = true }
parking_lot      = { workspace = true }
percent-encoding = { workspace = true }
serde            = { workspace = true }
thiserror        = { workspace = true }
tokio            = { workspace = true }
typed-path       = { workspace = true }

[target."cfg(unix)".dependencies]
libc  = { workspace = true }
uzers = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = [ "Win32_UI_Shell" ] }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

