[package]
name = "fb-term"
description            = "Yazi terminal extensions"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-config = { path = "../config", version = "26.2.2" }
fb-emulator = { path = "../emulator", version = "26.2.2" }
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-shim = { path = "../shim", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }

# External dependencies
anyhow    = { workspace = true }
crossterm = { workspace = true }
ratatui   = { workspace = true }
tokio     = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

