[package]
name = "fb-emulator"
description            = "Yazi terminal emulator database"
version = "26.2.2"
edition = "2024"
license = "MIT"
authors = ["DX Contributors"]
homepage = "https://github.com/sxyazi/yazi"
repository = "https://github.com/sxyazi/yazi"
rust-version = "1.85"

[lints]
workspace = true

[dependencies]
fb-macro = { path = "../macro", version = "26.2.2" }
fb-shared = { path = "../shared", version = "26.2.2" }
fb-tty = { path = "../tty", version = "26.2.2" }

# External dependencies
anyhow     = { workspace = true }
crossterm  = { workspace = true }
either     = { workspace = true }
scopeguard = { workspace = true }
tokio      = { workspace = true }
tracing    = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
crossterm = { workspace = true, features = [ "use-dev-tty", "libc" ] }

